# sc2replayfix

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
config/: config.conf
src/: Config.cpp  Config.h  DirectoryWatcher.cpp  DirectoryWatcher.h  Logger.h  ReplayFile.cpp  ReplayFile.h  ReplayPatcher.cpp  ReplayPatcher.h  Sc2Version.cpp  Sc2Version.h  Timer.h  main.cpp
